Updated gulpfile.js by adding electron-connect

--- a/dst/index.html
+++ b/dst/index.html
@@ -1,1 +1,2 @@
-<!DOCTYPE html><html><head><link rel="stylesheet" href="index.css"></head><body><main></main><script src="index.js"></script></body></html>
+<!DOCTYPE html><html><head><link rel="stylesheet" href="index.css"></head><body><main></main><script>const {client} = require('electron-connect');
+client.create();</script><script src="index.js"></script></body></html>
