--- a/app/dst/index.html
+++ b/app/dst/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"></head><body><main></main><script src="index.js"></script></body></html>
+<!DOCTYPE html><html><head><meta charset="utf-8"></head><body><main></main><script src="vendor.js"></script><script src="main.js"></script></body></html>
